syntax = "proto3";

service BananaRandom {
  rpc RollDice(RollRequest) returns (RollResponse) {}
}

message RollRequest {
  int32 gameId = 1;
  int32 playerId = 2;
}

message Roll {
  repeated int32 dice = 1;
}

message RollResponse {
  Roll roll = 1;
}